--- a/template2.html
+++ b/template2.html
@@ -306,7 +306,7 @@
                     height="26"></a>
         </div>
         <div class="author">
-            <p>Created by <a href="#">G. Gahov</a></p>
+            <p>Created by <a href="https://github.com/92gahov" target="_blank">92gahov</a></p>
         </div>
     </footer>
 
