--- a/template3.html
+++ b/template3.html
@@ -140,7 +140,7 @@
                 width="26" height="26">
         </a>
         <div class="author">
-            <p>Created by <a href="#">G. Gahov</a></p>
+            <p>Created by <a href="https://github.com/92gahov" target="_blank">92gahov</a></p>
         </div>
     </div>
 
