--- a/template4.html
+++ b/template4.html
@@ -346,7 +346,7 @@
         <footer>
             <div>
                 <p>Sample text. Click to select the text box. Click again or double click to start editing the text.</p>
-                <p>Created by: <a href="#">G. Gahov</a></p>
+                <p>Created by: <a href="https://github.com/92gahov" target="_blank">92gahov</a></p>
             </div>
         </footer>
     </main>
