--- a/template.html
+++ b/template.html
@@ -110,7 +110,7 @@
     </main>
     <footer id="footer">
         <div>
-            <p>Website Template created by <a href="#">G.Gahov</a></p>
+            <p>Website Template created by <a href="https://github.com/92gahov" target="_blank">92gahov</a></p>
         </div>
     </footer>
 
